--- a/src/ProductSingle.css
+++ b/src/ProductSingle.css
@@ -215,6 +215,7 @@
 
 .info-item {
   padding: 10px 0;
+  color: #212529;
   border-bottom: 1px solid #f8f9fa;
   display: flex;
   justify-content: space-between;
