--- a/src/About.css
+++ b/src/About.css
@@ -18,6 +18,7 @@
   min-height: 100vh;
   transition: all 0.3s ease;
   margin: 0;
+  margin-top: 50px;
   padding: 0;
   width: 100%;
   overflow-x: hidden;
